fixed_templates/artifact-hub_terrascan_fixed_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql-headless
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: release-name
    role: master
---
apiVersion: v1
kind: Service
metadata:
  name: hub
  labels:
    app.kubernetes.io/component: hub
    helm.sh/chart: artifact-hub-1.14.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.14.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    networking.gke.io/load-balancer-type: Internal
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: hub
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: trivy
  labels:
    app.kubernetes.io/component: trivy
    helm.sh/chart: artifact-hub-1.14.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.14.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: trivy
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    app.kubernetes.io/component: hub
    helm.sh/chart: artifact-hub-1.14.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.14.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: hub
      app.kubernetes.io/name: artifact-hub
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '8001'
        container.apparmor.security.beta.kubernetes.io/hub: runtime/default
        container.apparmor.security.beta.kubernetes.io/check-db-ready: runtime/default
        container.apparmor.security.beta.kubernetes.io/check-db-migrator-run: runtime/default
      labels:
        app.kubernetes.io/component: hub
        app.kubernetes.io/name: artifact-hub
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: hub
      containers:
      - name: hub
        image: artifacthub/hub:v1.14.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: hub-config
          mountPath: /home/hub/.cfg
          readOnly: true
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - ls
            - /
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
          readOnlyRootFilesystem: true
        livenessProbe:
          exec:
            command:
            - ls
            - /
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: hub-config
        secret:
          secretName: hub-config
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy
  labels:
    app.kubernetes.io/component: trivy
    helm.sh/chart: artifact-hub-1.14.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.14.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: trivy
      app.kubernetes.io/name: artifact-hub
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/component: trivy
        app.kubernetes.io/name: artifact-hub
        app.kubernetes.io/instance: release-name
      annotations:
        container.apparmor.security.beta.kubernetes.io/trivy: runtime/default
    spec:
      containers:
      - name: trivy
        image: aquasec/trivy:0.37.3
        command:
        - trivy
        - --debug
        - --cache-dir
        - /trivy
        - server
        - --listen
        - 0.0.0.0:8081
        volumeMounts:
        - name: trivy
          mountPath: /trivy
        ports:
        - name: http
          containerPort: 8081
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - ls
            - /
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
          readOnlyRootFilesystem: true
        livenessProbe:
          exec:
            command:
            - ls
            - /
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: trivy
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: release-name
    heritage: Helm
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  serviceName: release-name-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      release: release-name
      role: master
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app: postgresql
        chart: postgresql-8.2.1
        release: release-name
        heritage: Helm
        role: master
      annotations:
        container.apparmor.security.beta.kubernetes.io/release-name-postgresql: runtime/default
        container.apparmor.security.beta.kubernetes.io/init-chmod-data: runtime/default
    spec:
      securityContext:
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: release-name-postgresql
        image: docker.io/artifacthub/postgres:12@sha256:c549ac499c81cd8760e2c1b861a18138763da4e2678f90eb3b64c193f49b641a
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            memory: 256Mi
            cpu: 250m
        securityContext:
          runAsUser: 25000
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsGroup: 25000
          readOnlyRootFilesystem: true
        ports:
        - name: tcp-postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U "postgres" -d "hub" -h 127.0.0.1 -p 5432
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - -e
            - 'exec pg_isready -U "postgres" -d "hub" -h 127.0.0.1 -p 5432

              '
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
        - name: data
          mountPath: /data
          subPath: null
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
      - name: secret-volume
        secret:
          secretName: my-secret
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub
  labels:
    app.kubernetes.io/component: hub
    helm.sh/chart: artifact-hub-1.14.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.14.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: hub
      port:
        number: 80
